--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,10 @@
 				<ul>
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li>
+
 					<!-- <li><a href="contact.html">Contact</a></li> -->
 				</ul>
 			</div>
@@ -142,7 +141,7 @@
 								<div class="edu_text">
 									<p>The objective of this project is to generate fake datasets for training machine learning models. The object is scanned using a depth camera and a 3D model is generated. Then millions of fake images are generated using the 3D model and the images are added with a variety of backgrounds, to generate a variety of data to train robust detection and classification models.</p>
 								</div>
-								<div class="edu_subtitle">Skills used:<p>PCL, OpenCV, tensorflow, Open3D, Gazebo, C++, Python</p></div></a>
+								<div class="edu_subtitle">Skills used:<p>PCL, OpenCV, tensorflow, Open3D, Gazebo, C++, Python, ROS</p></div></a>
 							</div>
 						</div>
 
@@ -158,7 +157,7 @@
 								</div>
 								<div class="edu_text">
 									<p>This is a work in progress and is my final MS Robotics project which is to be completed by end of Fall 2018. The objective of this project is to develop an autonomous drone that can traverse through a field give GPS co-ordinates as bounding box. This involves visual odometry, sensor fusion, controls etc and RTK GPS is used to obtain centimeter level accuracy. The video demonstrates the final objective of the project.</p>
-								</div></a>
+								</div><div class="edu_subtitle">Skills used:<p>SLAM, Sensor fusion, OpenCV, C++, Python, ROS</p></div></a>
 							</div>
 							<div><div class="proj_image"><img src="images/parrot.gif" alt=""></div></div>
 						</div>
@@ -175,6 +174,7 @@
 								<div class="edu_text">
 									<p>The objective of this project was to design a hopping robot for a NASA project that investigates legged locomotion on soft ground.The robot is planar, mounted on a boom, with 3 parallel DOF. This was developed for as a part of a 2 quarter long coursework and is the combined effort of 7 team members.</p>
 								</div>
+								<!-- <div class="edu_subtitle">Skills used:<p>SLAM, Sensor fusion, OpenCV, C++, Python, ROS</p></div></a> -->
 							</div>
 						</div>
 
@@ -190,7 +190,9 @@
 								</div>
 								<div class="edu_text">
 									<p>This project is an attempt to train a custom model to detect and locate each tooth on a excavator bucket. Tensorflow machine learning library from Google was used to train the custom model along with OpenCV. The model was trained with just 100 images for this project, and so the accuracy of detection can be increased by increasing the number of training images and fine tuning the parameters between accuracy and speed. </p>
-								</div></a>
+								</div>
+							<div class="edu_subtitle">Skills used:<p>OpenCV, Tensorflow, C++, Python</p></div></a>
+
 							</div>
 							<div><div class="proj_image"><img src="images/excavator.gif" alt=""></div></div>
 						</div>
@@ -207,7 +209,7 @@
 								</div>
 								<div class="edu_text">
 									<p>The objective of this project was to enable baxter to find a cup on the table using camera vision and IR Sensor, then handle the cup to the right hand of the person in front of him, which was sensed by applying skeleton tracking on pointcloud data from a depth camera .</p>
-								</div></a>
+								</div><div class="edu_subtitle">Skills used:<p>OpenCV, ROS, C++, Python</p></div></a></a>
 							</div>
 						</div>
 
