--- a/sdg.html
+++ b/sdg.html
@@ -45,11 +45,9 @@
 				<ul>
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li>
 					<!-- <li><a href="contact.html">Contact</a></li> -->
 				</ul>
 			</div>
@@ -118,9 +116,10 @@
 
 <div class="main_content">
 <div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
-<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
+<div class="proj_title_container d-flex flex-column align-items-start justify-content-end">
 
-<div class="proj_title">Synthetic dataset generation for machine learning</div>
+<!-- <div class="proj_title">Synthetic dataset generation for machine learning</div> -->
+<h1 class="proj_title">Synthetic dataset generation for machine learning</h1>
 </div>
 <!-- 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark"> -->
 <!-- <div class="video-responsive">
@@ -133,6 +132,7 @@
   </div>
 
 </div>
+<br><br>
 
 <!-- Skills Content -->
 <div class="edu_title">Summary</div>
