Corrected link for resume

--- a/baxter.html
+++ b/baxter.html
@@ -33,7 +33,7 @@
 					<!-- <li><a href="contact.html">Contact</a></li> -->
 				</ul>
 				<div class="header_button ml-auto">
-					<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
+					<a href="https://suhailpallathsulaiman.github.io/Resume.pdf">Resume</a>
 					<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 					<div class="general_info_image">
 						<div class="background_image" style="background-image:url(images/suhail.jpg)"></div>
 						<div class="header_button_2">
-							<a href="https://suhailpallathsulaiman.github.io/Suhail_Pallath_Sulaiman_Resume.pdf">Resume</a>
+							<a href="https://suhailpallathsulaiman.github.io/Resume.pdf">Resume</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
 						</div>
 					</div>
