--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
 
 
 							<div><a href="https://suhailpallathsulaiman.github.io/sdg.html">
-								<div class="proj_image"><img src="images/stitching.gif" alt=""></div></div>
+								<div class="proj_image"><img src="images/stitching2.gif" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
 
@@ -148,8 +148,8 @@
 
 												<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<a href="https://youtu.be/2aV62D1XlNc" >
-							<div><div class="proj_image"><img src="images/parrot.gif" alt=""></div></div>
+							<a href="https://suhailpallathsulaiman.github.io/farmfly.html" >
+							<div><div class="proj_image"><img src="images/parrot2.gif" alt=""></div></div>
 
 							<div class="edu_content">
 								
@@ -184,7 +184,7 @@
 												<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
 							<a href="https://www.youtube.com/watch?v=p4vXwedmfDM" >
-							<div><div class="proj_image"><img src="images/excavator.gif" alt=""></div></div>
+							<div><div class="proj_image"><img src="images/excavator2.gif" alt=""></div></div>
 							<div class="edu_content">
 								
 								<div class="edu_title_container">
