--- a/farmfly.html
+++ b/farmfly.html
@@ -309,6 +309,7 @@ chmod a+x install_geographiclib_datasets.sh
 
 
 <br><br>
+<div class="edu_title">
 Testing the code using SITL</div>
 <div class="edu_text">
 <p>● Start the Simulation
@@ -365,6 +366,23 @@ Testing the code using SITL</div>
 <p>● Use RTK GPS and to improve the current precision of the drone.</p>
 </div>
 
+<div><p>The following video show trajectory generation</p>
+</div>
+<div class="video-holder">
+  <div id="video-container">
+      <iframe width="1000" height="563" src="https://www.youtube.com/embed/9YlNOHu2-uc" frameborder="0" allowfullscreen>        </iframe> 
+  </div>
+
+</div>
+<div><p>The following video show bebop 2 autonomously following a larger trajectory</p>
+</div>
+<div class="video-holder">
+  <div id="video-container">
+      <iframe width="1000" height="563" src="https://www.youtube.com/embed/DaQMJk3QypE" frameborder="0" allowfullscreen>        </iframe> 
+  </div>
+
+</div>
+
 
 <div class="video-holder">
   <div id="video-container">
@@ -373,9 +391,9 @@ Testing the code using SITL</div>
 
 </div>
 
-<!-- 
+
 					</div>
- -->
+
 				</div>
 			</div>
 		</div>
